[metadata]
name = conaction
version = file: src/conaction/VERSION
author = Galen Seilis
author_email = seilis@unbc.ca
description = Efficient implmenetations of instantiations of the Trinity of Covariation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/galenseilis/ConAction
project_urls = 
	Bug Tracker = https://github.com/galenseilis/ConAction/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
